--- a/src/components/stateless/ProductItem/ProductItem.css
+++ b/src/components/stateless/ProductItem/ProductItem.css
@@ -1,5 +1,3 @@
-/* Testing */
-
 .product {
     position: relative;
     width: 263px;
@@ -10,18 +8,6 @@
     -webkit-box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
     box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
     float: left;
-}
-
-.product:nth-child(4n-3) {
-    margin-left: 0;
-}
-
-.product:nth-child(4n) {
-    margin-right: 0;
-}
-
-.product:nth-child(-n+4) {
-    margin-top: 0;
 }
 
 .product__info {
@@ -75,4 +61,56 @@
     margin-bottom: 13px;
     font-family: 'Muli', sans-serif;
     font-weight: 400;
+}
+
+.product__button--gray {
+    border: 1px solid #e0e0e0;
+    padding: 0 14px;
+    line-height: 37px;
+    display: block;
+    width: auto;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 115px;
+    float: left;
+    font-size: 15px;
+    border-radius: 2px;
+    color: #9d9d9d;
+    text-align: center;
+    margin-top: 5px;
+    text-decoration: none;
+    font-family: 'Muli', sans-serif;
+    font-weight: 400;
+}
+
+.product__button--gray span, .product__button--yellow span {
+    vertical-align: -1px;
+}
+
+.product__button--yellow {
+    border: 1px solid #efc518;
+    background: #f8c600;
+    padding: 0 15px;
+    line-height: 37px;
+    display: block;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 98px;
+    float: right;
+    font-size: 15px;
+    border-radius: 2px;
+    color: #ffffff;
+    text-align: center;
+    margin-top: 5px;
+    text-decoration: none;
+    font-family: 'Muli', sans-serif;
+    font-weight: 700;
+}
+
+.product__button--gray:hover {
+    cursor: pointer;
+}
+
+.product__button--yellow:hover {
+    cursor: pointer;
 }
