Add missing styles

--- a/src/components/stateless/ProductItem/ProductItem.css
+++ b/src/components/stateless/ProductItem/ProductItem.css
@@ -114,3 +114,14 @@
 .product__button--yellow:hover {
     cursor: pointer;
 }
+
+.flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
