--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 @import url('~normalize.css');
+@import url('~simple-line-icons/css/simple-line-icons.css');
