--- a/src/components/stateful/ProductContainer/ProductContainer.scss
+++ b/src/components/stateful/ProductContainer/ProductContainer.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 1142px;
   min-height: 100vh;
 }
