--- a/src/components/stateless/ProductItem/ProductItem.scss
+++ b/src/components/stateless/ProductItem/ProductItem.scss
@@ -1,13 +1,20 @@
 .product {
+
   position: relative;
   width: 263px;
   border-radius: 2px;
   background: white;
   overflow: hidden;
-  margin-bottom: 20px;
+  margin: 10px;
   -webkit-box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
   float: left;
+
+  &__icon {
+    margin-right: 6px;
+    font-size: 20px;
+    vertical-align: -4px;
+  }
 
   &__info {
     padding: 13px 20px 20px 20px;
