Adding labels in NavigationBar

--- a/src/components/stateless/NavigationBar/NavigationBar.scss
+++ b/src/components/stateless/NavigationBar/NavigationBar.scss
@@ -3,10 +3,13 @@
 $create-offer-background-color: #f8c600;
 $create-offer-border-color: #efc518;
 $create-offer-text-color: #ffffff;
-$create-offer-height: 50px;
+$height: 50px;
 
 .navigation {
-  height: 50px;
+  display: flex;
+  flex-direction: row;
+  line-height: $height;
+  height: $height;
   background-color: red;
 }
 
@@ -14,5 +17,5 @@ $create-offer-height: 50px;
   @include button-special($create-offer-background-color,
           $create-offer-border-color,
           $create-offer-text-color,
-          $create-offer-height);
+          $height);
 }
