--- a/src/components/stateless/ProductItem/ProductItem.scss
+++ b/src/components/stateless/ProductItem/ProductItem.scss
@@ -6,11 +6,11 @@ $product-seller-color: #000;
 $product-title-color: #0d0e04;
 $product-field-label: #9d9d9d;
 $product-field-value: #0d0e04;
-$buy-button-border: #efc518;
+$buy-button-border: #002C87;
 $buy-button-text-color: #ffffff;
-$buy-button-background-color: #f8c600;
+$buy-button-background-color: #002C87;
 $more-details-border: #e0e0e0;
-$more-details-color: #9d9d9d;
+$more-details-color: #002C87;
 
 .product {
   position: relative;
