--- a/src/components/stateless/PageContainer/PageContainer.scss
+++ b/src/components/stateless/PageContainer/PageContainer.scss
@@ -1,8 +1,9 @@
-$page-background-color: #f9f9f9;
+$page-background-color: #ffffff;
 
 .page-container {
+  padding: 25px;
   background-color: $page-background-color;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
