--- a/src/components/stateless/ProductItem/ProductItem.scss
+++ b/src/components/stateless/ProductItem/ProductItem.scss
@@ -3,9 +3,9 @@
 $container-shadow: rgba(0, 0, 0, 0.15);
 $product-name-color: #000;
 $product-seller-color: #000;
-$product-title-color: #0d0e04;
+$product-title-color: #002c87;
 $product-field-label: #9d9d9d;
-$product-field-value: #0d0e04;
+$product-field-value: #002C87;
 $buy-button-border: #002C87;
 $buy-button-text-color: #ffffff;
 $buy-button-background-color: #002C87;
