--- a/src/components/RootComponent.scss
+++ b/src/components/RootComponent.scss
@@ -1,3 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 @import url('~simple-line-icons/css/simple-line-icons.css');
 @import url('~normalize.css');
+
+.logo {
+  display:block;
+  width: 200px;
+  height: 34px;
+  margin-right: auto;
+}
