--- a/src/components/stateless/PageContainer/PageContainer.scss
+++ b/src/components/stateless/PageContainer/PageContainer.scss
@@ -1,7 +1,7 @@
 $page-background-color: #ffffff;
 
 .page-container {
-  padding: 25px;
+  padding: 25px 45px 0 45px;
   background-color: $page-background-color;
   display: flex;
   flex-direction: column;
