--- a/src/components/stateless/Header/Header.scss
+++ b/src/components/stateless/Header/Header.scss
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
   padding: 0 34px 10px 34px;
