--- a/src/components/stateless/Button/Button.scss
+++ b/src/components/stateless/Button/Button.scss
@@ -12,6 +12,7 @@
   text-align: center;
   font-family: 'Muli', sans-serif;
   font-weight: 700;
+  white-space: nowrap
 }
 
 .button-icon-default {
