--- a/src/components/stateless/ProductItem/ProductItem.scss
+++ b/src/components/stateless/ProductItem/ProductItem.scss
@@ -1,16 +1,20 @@
 @import '../Button/Button.scss';
 
 $container-shadow: rgba(0, 0, 0, 0.15);
+
 $product-name-color: #000;
 $product-seller-color: #000;
 $product-title-color: #002c87;
 $product-field-label: #9d9d9d;
 $product-field-value: #002C87;
+
 $buy-button-border: #002C87;
 $buy-button-text-color: #ffffff;
 $buy-button-background-color: #002C87;
 $buy-button-height: 40px;
+
 $more-details-border: #e0e0e0;
+$more-details-text-color: #002C87;
 $more-details-color: #002C87;
 $more-details-height: 40px;
 
@@ -24,7 +28,6 @@ $more-details-height: 40px;
   box-shadow: 0 0 10px -2px $container-shadow, 0 0 10px -2px $container-shadow;
   float: left;
 
-
   &__icon {
     margin-right: 6px;
     font-size: 20px;
@@ -36,14 +39,15 @@ $more-details-height: 40px;
   }
 
   &__more-details-button {
-    @include button-special($more-details-border, 0, $more-details-color, $more-details-height);
+    @include button($more-details-text-color, #ffffff, $more-details-height);
+    @include border(#e0e0e0, 1px, solid);
     &:hover {
       cursor: pointer;
     }
   }
 
   &__buy-button {
-    @include button-special($buy-button-background-color, $buy-button-border, $buy-button-text-color, $buy-button-height);
+    @include button($buy-button-text-color, $buy-button-background-color, $buy-button-height);
     &:hover {
       cursor: pointer;
     }
