--- a/src/components/stateless/NavigationBar/NavigationBar.scss
+++ b/src/components/stateless/NavigationBar/NavigationBar.scss
@@ -5,14 +5,16 @@ $create-offer-button-border-color: #002C87;
 $create-offer-button-height: 40px;
 $create-offer-button-text-color: #ffffff;
 $navigation-background-color: #ffffff;
-$navigation-bar-height: 50px;
-$navigation-bar-padding: 0 34px;
+$navigation-bar-height: 90px;
+$navigation-bar-padding: 0 0px;
 
 .navigation {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
+  border-bottom: 1px solid rgba(0,0,0,0.15);
   padding: $navigation-bar-padding;
   line-height: $navigation-bar-height;
   height: $navigation-bar-height;
@@ -29,7 +31,7 @@ $navigation-bar-padding: 0 34px;
   &__title {
     font-family: 'Muli', sans-serif;
     font-size: 22px;
-    width: 100%;
+    margin-right: auto;
     color: #476cbb;
   }
 
