--- a/src/components/stateless/PageContainer/PageContainer.scss
+++ b/src/components/stateless/PageContainer/PageContainer.scss
@@ -1,8 +1,8 @@
 $page-background-color: #ffffff;
 
 .page-container {
-  padding: 25px 45px 0 45px;
   background-color: $page-background-color;
+  padding: 30px 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
