Create offer styling

--- a/src/components/stateless/NavigationBar/NavigationBar.scss
+++ b/src/components/stateless/NavigationBar/NavigationBar.scss
@@ -14,6 +14,7 @@ $navigation-bar-padding: 0 0px;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
+  margin-bottom: 30px;
   border-bottom: 1px solid rgba(0,0,0,0.15);
   padding: $navigation-bar-padding;
   line-height: $navigation-bar-height;
