Create offer styling

--- a/src/components/stateless/NavigationBar/NavigationBar.scss
+++ b/src/components/stateless/NavigationBar/NavigationBar.scss
@@ -33,7 +33,7 @@ $navigation-bar-padding: 0 0px;
     font-family: 'Muli', sans-serif;
     font-size: 22px;
     margin-right: auto;
-    color: #476cbb;
+    color: #002C87;
   }
 
   &__category-selector {
