--- a/src/components/stateful/Pages/CreateOfferPage/CreateOfferPage.scss
+++ b/src/components/stateful/Pages/CreateOfferPage/CreateOfferPage.scss
@@ -1,16 +1,38 @@
 @import '../../../stateless/Button/Button.scss';
 
-.navigation {
+:local(.cancelButton) {
+  @include button(#002C87, #ffffff, 40px);
+  @include border(#002c87, 1px);
+  width: 200px;
+  margin: 0 20px;
+}
 
-  &__cancel-button {
-    @include button(#002C87, #ffffff, 40px);
-    @include border(#002c87, 1px);
-    width: 200px;
-    margin: 0 20px;
-  }
+:local(.saveButton) {
+  @include button(#ffffff, #002c87, 40px);
+  width: 200px;
+}
 
-  &__save-button {
-    @include button(#ffffff, #002c87, 40px);
-    width: 200px;
-  }
+:local(.name) {
+  width: 750px;
+}
+
+:local(.image) {
+  width: 360px;
+  height: 276px;
+  border: 1px solid #002C87;
+}
+
+:local(.container) {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 750px;
+}
+
+:local(.column) {
+  width: 50%;
+}
+
+:local(.element) {
+  padding-bottom: 15px;
 }
