--- a/src/components/stateless/TextField/TextField.scss
+++ b/src/components/stateless/TextField/TextField.scss
@@ -1,16 +1,15 @@
 $label-text-color: #002C87;
 $field-height: 50px;
-
 $underline-color: rgba(0,44,135,0.15);
 $placeholder-color: rgba(32,171,250,0.42);
 
 :local(.label) {
   display: block;
+  padding-bottom: 5px;
   font-family: 'Muli', sans-serif;
+  font-weight: bolder;
   color: $label-text-color;
-  font-weight: bold;
   font-size: 13px;
-  padding-bottom: 10px;
 
   &::after {
     content: ":"
@@ -18,18 +17,15 @@ $placeholder-color: rgba(32,171,250,0.42);
 }
 
 :local(.input) {
-  display: flex;
   color: #002C87;
-  border: 1px solid #002C87;
-  flex-direction: column;
-  padding-left: 14px;
+  border: 1px solid rgba(158,158,158,0.4);
   font-family: 'Muli', sans-serif;
   font-size: 28px;
-  width: 750px;
+  width: 100%;
   height: 50px;
 
   &:focus {
-    border: 1px solid #002C87;
+    border: 1px solid rgba(158,158,158,0.4);
     outline: none;
   }
 
