--- a/src/components/stateless/TextField/TextField.scss
+++ b/src/components/stateless/TextField/TextField.scss
@@ -18,6 +18,7 @@ $placeholder-color: rgba(32,171,250,0.42);
 
 :local(.input) {
   color: #002C87;
+  padding: 5px;
   border: 1px solid rgba(158,158,158,0.4);
   font-family: 'Muli', sans-serif;
   font-size: 28px;
