--- a/src/components/stateless/SearchField/SearchField.scss
+++ b/src/components/stateless/SearchField/SearchField.scss
@@ -2,7 +2,7 @@ $underline-color: rgba(0,44,135,0.15);
 $placeholder-color: rgba(32,171,250,0.42);
 $field-name-color: rgba(0,44,135,0.4);
 
-.field-name {
+:local(.label) {
   font-family: 'Muli', sans-serif;
   color: $field-name-color;
   font-size: 13px;
@@ -13,7 +13,7 @@ $field-name-color: rgba(0,44,135,0.4);
   }
 }
 
-.text-field {
+:local(.textField) {
   font-family: 'Muli', sans-serif;
   color: #20abfa;
   font-size: 15px;
