--- a/src/components/stateless/AttributeValueField/AttributeValueField.scss
+++ b/src/components/stateless/AttributeValueField/AttributeValueField.scss
@@ -10,6 +10,9 @@
   display: table-cell;
   padding-right: 20px;
   color: rgba(0,44,135,0.4);
+  &:after {
+    content:":"
+  }
 }
 
 :local(.value) {
