--- a/src/components/stateful/Pages/CreateOfferPage/CreateOfferPage.scss
+++ b/src/components/stateful/Pages/CreateOfferPage/CreateOfferPage.scss
@@ -7,13 +7,33 @@
   margin: 0 20px;
 }
 
+:local(.top) {
+  width: 762px;
+}
+
 :local(.saveButton) {
   @include button(#ffffff, #002c87, 40px);
   width: 200px;
 }
 
+:local(.column) {
+  margin-left: auto;
+}
+
 :local(.name) {
   width: 750px;
+}
+
+:local(.table) {
+  display: table;
+}
+
+:local(.field) {
+  display: table-cell;
+}
+
+:local(.value) {
+  display: table-cell;
 }
 
 :local(.verticalContainer) {
@@ -48,10 +68,6 @@
   width: 762px;
   display: flex;
   flex-direction: row;
-}
-
-:local(.column) {
-
 }
 
 :local(.element) {
