--- a/src/components/stateless/NavigationBar/NavigationBar.scss
+++ b/src/components/stateless/NavigationBar/NavigationBar.scss
@@ -15,7 +15,7 @@ $navigation-bar-padding: 0 0px;
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 30px;
-  border-bottom: 1px solid rgba(0,0,0,0.15);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   padding: $navigation-bar-padding;
   line-height: $navigation-bar-height;
   height: $navigation-bar-height;
