--- a/src/components/stateless/TextField/TextField.scss
+++ b/src/components/stateless/TextField/TextField.scss
@@ -3,22 +3,9 @@ $field-height: 50px;
 $underline-color: rgba(0,44,135,0.15);
 $placeholder-color: rgba(32,171,250,0.42);
 
-:local(.label) {
-  display: block;
-  padding-bottom: 5px;
-  font-family: 'Muli', sans-serif;
-  font-weight: bolder;
-  color: $label-text-color;
-  font-size: 13px;
-
-  &::after {
-    content: ":"
-  }
-}
-
 :local(.input) {
   color: #002C87;
-  padding: 5px;
+  padding: 6px 0 6px 14px;
   border: 1px solid rgba(158,158,158,0.4);
   font-family: 'Muli', sans-serif;
   font-size: 28px;
