--- a/src/components/stateless/InputField/InputField.scss
+++ b/src/components/stateless/InputField/InputField.scss
@@ -29,6 +29,7 @@ $label-color: #002c87;
   font-size: 16px;
   height: 40px;
   outline: none;
+  padding-left: 10px;
 
   &::placeholder {
     content: 'Fish';
