--- a/src/components/stateless/SearchField/SearchField.scss
+++ b/src/components/stateless/SearchField/SearchField.scss
@@ -1,3 +1,5 @@
+@import '../../stateless/shared.scss';
+
 $underline-color: rgba(0,44,135,0.15);
 $placeholder-color: rgba(32,171,250,0.42);
 $field-name-color: rgba(0,44,135,0.4);
@@ -14,14 +16,17 @@ $field-name-color: rgba(0,44,135,0.4);
 }
 
 :local(.textField) {
-  font-family: 'Muli', sans-serif;
-  color: #20abfa;
+  @include font();
   font-size: 15px;
   outline: none;
   background-color: transparent;
   border: 0 none;
   border-bottom: 1px solid $underline-color;
   padding: 3px 3px;
+
+  &:focus {
+    @include border-focus();
+  }
 
   &::placeholder {
     content: 'Fish';
