--- a/src/components/stateful/Pages/CreateOfferPage/CreateOfferPage.scss
+++ b/src/components/stateful/Pages/CreateOfferPage/CreateOfferPage.scss
@@ -55,6 +55,7 @@
   height: 276px;
   margin-right: 28px;
   border: 1px solid rgba(0,44,135,0.31);
+  cursor: pointer;
 }
 
 :local(.horizontalContainer) {
