--- a/src/components/stateful/HeaderContainer/HeaderContainer.scss
+++ b/src/components/stateful/HeaderContainer/HeaderContainer.scss
@@ -1,10 +1,11 @@
-.header {
+:local(.header) {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
+  margin-bottom: 10px;
 }
 
-.breadcrumbs {
-  margin-top: 20px;
+:local(.breadcrumbs) {
+  padding-top: 15px;
 }
